--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
 	"license": "ISC",
 	"engines": {
 		"node": ">=6"
+	},
+	"dependencies": {
+		"@derhuerst/location": "^1.0.0",
+		"mri": "^1.1.1"
 	}
 }
